--- a/src/Tilengine.vcxproj
+++ b/src/Tilengine.vcxproj
@@ -237,6 +237,7 @@ copy $(TargetDir)$(TargetName).lib $(SolutionDir)lib\$(Platform)
     <ClCompile Include="LoadTileset.c" />
     <ClCompile Include="Math2D.c" />
     <ClCompile Include="Object.c" />
+    <ClCompile Include="ObjectList.c" />
     <ClCompile Include="Palette.c" />
     <ClCompile Include="ResourcePacker.c" />
     <ClCompile Include="Sequence.c" />
@@ -264,6 +265,7 @@ copy $(TargetDir)$(TargetName).lib $(SolutionDir)lib\$(Platform)
     <ClInclude Include="LoadFile.h" />
     <ClInclude Include="Math2D.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="ObjectList.h" />
     <ClInclude Include="Palette.h" />
     <ClInclude Include="ResPack.h" />
     <ClInclude Include="Sequence.h" />
