--- a/src/Tilengine.vcxproj.filters
+++ b/src/Tilengine.vcxproj.filters
@@ -178,5 +178,8 @@
     <ClInclude Include="ObjectList.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Base64.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
