Preliminar work on libretro core
* Adds "tilengine_libretro" VisualStudio 2017 project based on skeletor core sample (https://github.com/bparker06/skeletor). It doesn't integrate with Tilengine yet, just builds without errors

--- a/src/Tilengine.vcxproj
+++ b/src/Tilengine.vcxproj
@@ -192,7 +192,7 @@ copy $(TargetDir)$(TargetName).lib $(SolutionDir)lib\$(Platform)
       <PrecompiledHeader />
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat />
-      <CompileAs>CompileAsC</CompileAs>
+      <CompileAs>CompileAsCpp</CompileAs>
     </ClCompile>
     <Link>
       <AdditionalDependencies>libpng.lib;SDL2.lib;%(AdditionalDependencies)</AdditionalDependencies>
