Working tilengine_libreto + lua game prototype
* tilengine_libreto successfully is loaded from RetroArch and runs a game implemented in lua which contains config{} table, game_load(), game_loop() and game_unload() functions
* Uses LuaJIT 2.0.5 with FFI library instead of vanilla lua
* Ships prebuilt static versions of luajit for Windows 32 and 64 bit
* Directory "lua_game" contains basic working game that loads assests and parallax scrolls the Sonic 1 assets
* Input is not yet bridged from Retroarch to lua script

--- a/src/tilengine_libretro.vcxproj
+++ b/src/tilengine_libretro.vcxproj
@@ -85,8 +85,11 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>libpng\$(Platform);sdl\lib\$(Platform);lua\$(Platform);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libpng.lib;lua53.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libpng.lib;lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(TargetPath) game_test</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -99,7 +102,7 @@
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>libpng\$(Platform);sdl\lib\$(Platform);lua\$(Platform);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libpng.lib;lua53.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libpng.lib;lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -113,8 +116,11 @@
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>libpng\$(Platform);sdl\lib\$(Platform);lua\$(Platform);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libpng.lib;lua53.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libpng.lib;lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(TargetPath) game_test</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -131,7 +137,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>libpng\$(Platform);sdl\lib\$(Platform);lua\$(Platform);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libpng.lib;lua53.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libpng.lib;lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -168,6 +174,7 @@
     <ClCompile Include="Tileset.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\Tilengine.h" />
     <ClInclude Include="aes.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Base64.h" />
