--- a/src/tilengine_libretro.vcxproj.filters
+++ b/src/tilengine_libretro.vcxproj.filters
@@ -185,5 +185,8 @@
     <ClInclude Include="libretro\libretro.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\Tilengine.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
