Implements configurable frame and raster effect callback
* Adds LUA_SetFrameCallback() and LUA_SetRasterCallback(), intended to be called from the lua script to set the names of the functions to call. Default frame callback is "game_loop"
* Misc cleanup

--- a/src/tilengine_libretro.vcxproj
+++ b/src/tilengine_libretro.vcxproj
@@ -88,7 +88,7 @@
       <AdditionalDependencies>libpng.lib;lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy $(TargetPath) game_test</Command>
+      <Command>copy $(TargetPath) ..\lua_game</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -104,6 +104,9 @@
       <AdditionalLibraryDirectories>libpng\$(Platform);sdl\lib\$(Platform);lua\$(Platform);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>libpng.lib;lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(TargetPath) ..\lua_game</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -119,7 +122,7 @@
       <AdditionalDependencies>libpng.lib;lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy $(TargetPath) game_test</Command>
+      <Command>copy $(TargetPath) ..\lua_game</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -139,6 +142,9 @@
       <AdditionalLibraryDirectories>libpng\$(Platform);sdl\lib\$(Platform);lua\$(Platform);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>libpng.lib;lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(TargetPath) ..\lua_game</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="aes.c" />
