WIP release 2.5.0 - debug tests complete
* Adds LoadTMX.c that includes common functionality for TLN_LoadTilemap() and TLN_LoadObjectLayer()
* Fixes TLN_GetLayerTile() causing segfault when passing negative x value, now wraps correctly from left to right
* TLN_LoadTileset(): restores loading tile type from custom property in addition to the standard one for backwards compatibility
* TLN_LoadObjectList(): removes "firstgid" parameter, autodetects it internally
* Forest sample: updates source to use the updated API and related resources

--- a/src/Tilengine.vcxproj
+++ b/src/Tilengine.vcxproj
@@ -235,6 +235,7 @@ copy $(TargetDir)$(TargetName).lib $(SolutionDir)lib\$(Platform)
     <ClCompile Include="LoadSpriteset.c" />
     <ClCompile Include="LoadTilemap.c" />
     <ClCompile Include="LoadTileset.c" />
+    <ClCompile Include="LoadTMX.c" />
     <ClCompile Include="Math2D.c" />
     <ClCompile Include="Object.c" />
     <ClCompile Include="ObjectList.c" />
@@ -264,6 +265,7 @@ copy $(TargetDir)$(TargetName).lib $(SolutionDir)lib\$(Platform)
     <ClInclude Include="Hash.h" />
     <ClInclude Include="Layer.h" />
     <ClInclude Include="LoadFile.h" />
+    <ClInclude Include="LoadTMX.h" />
     <ClInclude Include="Math2D.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="ObjectList.h" />
