Updates 2.6.0 changelog, minor fixes to documentation and makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -16,16 +16,12 @@ else
 		LIBS = -lSDL2 -lc -lz -lpng
 		BIN  = libTilengine.so
 		LDFLAGS = -shared -s
+		LIBPATH = ../lib/linux_$(arch)
 		ifeq ($(arch),i686)
 			CFLAGS = -m32 -msse2
-			LIBPATH = ../lib/linux_i686
 		endif
 		ifeq ($(arch),x86_64)
 			CFLAGS = -m64 -msse2
-			LIBPATH = ../lib/linux_x86_64
-		endif
-		ifeq ($(arch),armv7l)
-			LIBPATH = ../lib/linux_arm
 		endif
 	endif
 	
