WIP release 2.9.0 * World mode: adds TLN_LoadWorld(), TLN_SetWorldPosition(), TLN_SetLayerParallaxFactor() and TLN_SetSpriteWorldPosition() * World mode: TMXLoad() loads offset, parallax, opacity layer data * Removes previous manual layer parent mechanism, replaced by world mode * Preliminary support for tile-based text rendering * Cached TMXLoad() so repeated calls to same file will return cached copy instead of reloading the same file again

--- a/src/Tilengine.vcxproj
+++ b/src/Tilengine.vcxproj
@@ -243,10 +243,12 @@ copy $(TargetDir)$(TargetName).lib $(SolutionDir)lib\$(Platform)
     <ClCompile Include="Sprite.c" />
     <ClCompile Include="Spriteset.c" />
     <ClCompile Include="Tables.c" />
+    <ClCompile Include="Text.c" />
     <ClCompile Include="Tilemap.c" />
     <ClCompile Include="Tilengine.c" />
     <ClCompile Include="Tileset.c" />
     <ClCompile Include="Window.c" />
+    <ClCompile Include="World.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Tilengine.h" />
