--- a/src/Tilengine.vcxproj
+++ b/src/Tilengine.vcxproj
@@ -219,9 +219,9 @@ copy $(TargetDir)$(TargetName).lib $(SolutionDir)lib\$(Platform)
     <ClCompile Include="Bitmap.c" />
     <ClCompile Include="Blitters.c" />
     <ClCompile Include="cJSON.c" />
+    <ClCompile Include="crc32.c" />
     <ClCompile Include="Draw.c" />
     <ClCompile Include="GaussianBlur.c" />
-    <ClCompile Include="Hash.c" />
     <ClCompile Include="Layer.c" />
     <ClCompile Include="List.c" />
     <ClCompile Include="LoadBitmap.c" />
@@ -233,6 +233,7 @@ copy $(TargetDir)$(TargetName).lib $(SolutionDir)lib\$(Platform)
     <ClCompile Include="LoadTileset.c" />
     <ClCompile Include="LoadTMX.c" />
     <ClCompile Include="Math2D.c" />
+    <ClCompile Include="md5.c" />
     <ClCompile Include="Object.c" />
     <ClCompile Include="ObjectList.c" />
     <ClCompile Include="Palette.c" />
@@ -257,16 +258,17 @@ copy $(TargetDir)$(TargetName).lib $(SolutionDir)lib\$(Platform)
     <ClInclude Include="Bitmap.h" />
     <ClInclude Include="Blitters.h" />
     <ClInclude Include="cJSON.h" />
+    <ClInclude Include="crc32.h" />
     <ClInclude Include="Debug.h" />
     <ClInclude Include="DIB.h" />
     <ClInclude Include="Draw.h" />
     <ClInclude Include="Engine.h" />
-    <ClInclude Include="Hash.h" />
     <ClInclude Include="Layer.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="LoadFile.h" />
     <ClInclude Include="LoadTMX.h" />
     <ClInclude Include="Math2D.h" />
+    <ClInclude Include="md5.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="ObjectList.h" />
     <ClInclude Include="Palette.h" />
