--- a/src/Makefile
+++ b/src/Makefile
@@ -13,7 +13,7 @@ else
 	
 	# Linux specific flags (i686, x64 and arm)
 	ifeq ($(name),Linux)
-		LIBS = -lSDL2 -lc -lz -lpng
+		LIBS = -lSDL2 -lSDL2_mixer -lc -lz -lpng
 		BIN  = libTilengine.so
 		LDFLAGS = -shared -s
 		LIBPATH = ../lib/linux_$(arch)
